--- a/contrib/other-builds/moses/.project
+++ b/contrib/other-builds/moses/.project
@@ -1246,6 +1246,16 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/MaxSpanFreeNonTermSource.h</locationURI>
 		</link>
 		<link>
+			<name>FF/Model1Feature.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/Model1Feature.cpp</locationURI>
+		</link>
+		<link>
+			<name>FF/Model1Feature.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/Model1Feature.h</locationURI>
+		</link>
+		<link>
 			<name>FF/NieceTerminal.cpp</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/NieceTerminal.cpp</locationURI>
